--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "purescript-my-project",
+    "name": "purescript-classnames",
     "license": [
-        "MIT License"
+        "MIT"
     ],
     "repository": {
         "type": "git",
