--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,10 @@
         "output"
     ],
     "dependencies": {
-        "purescript-record": "^v2.0.2",
-        "purescript-strings": "^v4.0.1"
+        "purescript-maybe": "^v5.0.0",
+        "purescript-prelude": "^v5.0.1",
+        "purescript-record": "^v3.0.0",
+        "purescript-strings": "^v5.0.0",
+        "purescript-tuples": "^v6.0.1"
     }
 }
